# autorequests

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  autorequests.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yaml
autorequests/: __init__.py  __main__.py  body.py  commons.py  input.py  parsed.py  parsing.py  regexp.py  request.py  typings.py  url.py  utils.py
autorequests/classes/: __init__.py  body.py  case.py  class_.py  file.py  filehandler.py  input.py  inputfile.py  method.py  output.py  outputfile.py  parameter.py  url.py
autorequests/lib/: __init__.py  body.py  class_.py  method.py  parameter.py  url.py
autorequests/parsing/: __init__.py  body.py  fetch.py  powershell.py
autorequests/utilities/: __init__.py  case.py  inspector.py  parsing.py  regexp.py  utils.py
tests/: test_commons.py  test_input.py  test_lib.py  test_parsed.py  test_parsing.py  test_parsing_powershell.py  test_request.py  test_utilities.py  test_utils.py
tests/common/: fetch_examples.py  powershell_examples.py
tests/examples/: __init__.py  fetch_examples.py  httpbin_examples.py  powershell_examples.py
tests/examples/httpbin/: __init__.py
tests/examples/httpbin/http_methods/: __init__.py  delete.py  get.py  patch.py  post.py  put.py
