[tool.poetry]
name = "autorequests"
version = "2.0.0"
description = "Generate Python code to recreate a request from your browser."
authors = ["Hexiro"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Hexiro/autorequests"
repository = "https://github.com/Hexiro/autorequests"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.5.1"
rich-click = "^1.5.2"
requests-toolbelt = "^0.9.1"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
autorequests = "autorequests.__main__:cli"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.8.1"
httpx = "^0.23.0"
requests = "^2.26.0"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^5.0.4"
flake8-future-annotations = "^0.0.5"
pytest = "^7.1.3"
tox = "^3.26.0"
tox-poetry = "^0.4.1"
pre-commit = "^2.20.0"
types-requests = "^2.28.10"

[tool.black]
line-length = 121
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 121
combine_as_imports = true
combine_star = true

[tool.mypy]
python_version = 3.7
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
